--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -154,6 +154,8 @@ h1 {
 }
 #results_h1{
 	font-size:30px;
+	float:left;
+	display:block;
 }
 mark {
   color: #000;
@@ -276,6 +278,17 @@ optgroup {
 table {
   border-spacing: 0;
   border-collapse: collapse;
+}
+#interaction_table {
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
+  margin-top:5%;
+  margin-bottom:1%;
+}
+#source_tr {
+  height:300px;
+  overflow-y: scroll;
 }
 td,
 th {
