added tanimoto score support

--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -77,6 +77,10 @@ footer {
 	margin-top:1%;
 	text-align:left;
 }
+#t_score_field {
+	font-size:18px;
+	float:left;
+}
 
 #logo {
 	display: inline-block;
